第二次作业修改

--- a/superior-shepherd/src/pages/index.astro
+++ b/superior-shepherd/src/pages/index.astro
@@ -54,7 +54,7 @@ import Card from "../components/Card.astro";
     line-height: 1.6;
   }
   nav a {
-    color: white;
+    color:blue;
   }
   .astro-a {
     position: absolute;
