--- a/superior-shepherd/src/pages/index.astro
+++ b/superior-shepherd/src/pages/index.astro
@@ -48,7 +48,7 @@ import Card from "../components/Card.astro";
 		padding: 1rem;
 		width: 800px;
 		max-width: calc(100% - 2rem);
-		color:pink;
+		color:white;
 		font-size: 20px;
 		line-height: 1.6;
 	}
