--- a/superior-shepherd/src/pages/about.astro
+++ b/superior-shepherd/src/pages/about.astro
@@ -4,44 +4,17 @@ import Card from "../components/Card.astro";
 import "./styles/global.css";
 ---
 
+
 <Layout title="欢迎来到Astro">
 	<main>
-		<svg>···
-		</svg>
+		<svg>	···
+    </svg>
 			<a href="/">首页</a>
 			<a href="/about/">关于</a>
 			<a href="/blog/">博客</a>
-			<a href="/notes/">笔记</a>
-
-		<h1>欢迎来到 <span class="text-gradient">Astro</span></h1>
-		<h2>P211012592<span class="text-gradient">周子惠</span></h2>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br
-			/>
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
+	
+		<h1>关于我</h1>
+	<p>在这个页面，我将展示一些关于我的信息</p>
 	</main>
 </Layout>
 
@@ -51,12 +24,12 @@ import "./styles/global.css";
 		padding: 1rem;
 		width: 800px;
 		max-width: calc(100% - 2rem);
-		color:white;
+		color:rgb(245, 222, 226);
 		font-size: 20px;
 		line-height: 1.6;
 	}
 	nav a {
-		color: white;
+		color: rgb(245, 222, 226);
 	}
 	.astro-a {
 		position: absolute;
@@ -76,6 +49,7 @@ import "./styles/global.css";
 	}
 	h2 {
 		text-align: center;
+		font-size: 20px;
 	}
 	.text-gradient {
 		background-image: var(--accent-gradient);
@@ -110,5 +84,7 @@ import "./styles/global.css";
 		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
 		gap: 2rem;
 		padding: 0;
+	}
+	
 	}
 </style>
