--- a/superior-shepherd/src/pages/blog.astro
+++ b/superior-shepherd/src/pages/blog.astro
@@ -6,42 +6,16 @@ import "./styles/global.css";
 
 <Layout title="欢迎来到Astro">
 	<main>
-		<svg>···
-		</svg>
+		<svg>	···
+    </svg>
 			<a href="/">首页</a>
 			<a href="/about/">关于</a>
 			<a href="/blog/">博客</a>
-			<a href="/notes/">笔记</a>
-
-		<h1>欢迎来到 <span class="text-gradient">Astro</span></h1>
-		<h2>P211012592<span class="text-gradient">周子惠</span></h2>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br
-			/>
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
+	
+		<h1>网络文章</h1>
+	<p>在这个页面，我将展示一些关于我的文章</p>
 		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
+		
 	</main>
 </Layout>
 
@@ -56,7 +30,7 @@ import "./styles/global.css";
 		line-height: 1.6;
 	}
 	nav a {
-		color: white;
+		color:white;
 	}
 	.astro-a {
 		position: absolute;
@@ -76,6 +50,11 @@ import "./styles/global.css";
 	}
 	h2 {
 		text-align: center;
+		font-size: 20px;
+	}
+	p{
+		text-align: justify;
+		color: azure;
 	}
 	.text-gradient {
 		background-image: var(--accent-gradient);
