--- a/superior-shepherd/src/pages/about.astro
+++ b/superior-shepherd/src/pages/about.astro
@@ -12,6 +12,7 @@ import "./styles/global.css";
 			<a href="/">首页</a>
 			<a href="/about/">关于</a>
 			<a href="/blog/">博客</a>
+			<a href="/notes/">笔记</a>
 	
 		<h1>关于我</h1>
 	<p>在这个页面，我将展示一些关于我的信息</p>
