--- a/superior-shepherd/src/pages/blog.astro
+++ b/superior-shepherd/src/pages/blog.astro
@@ -11,11 +11,14 @@ import "./styles/global.css";
 			<a href="/">首页</a>
 			<a href="/about/">关于</a>
 			<a href="/blog/">博客</a>
+			<a href="/notes/">笔记</a>
 	
 		<h1>网络文章</h1>
 	<p>在这个页面，我将展示一些关于我的文章</p>
 		</p>
-		
+		<section class="link-card-grid">
+      <article class="link-card">
+        <a href="/md/1" >陋室铭赏析</a>
 	</main>
 </Layout>
 
