--- a/superior-shepherd/src/pages/index.astro
+++ b/superior-shepherd/src/pages/index.astro
@@ -51,12 +51,12 @@ import "./styles/global.css";
 		padding: 1rem;
 		width: 800px;
 		max-width: calc(100% - 2rem);
-		color:white;
+		color:rgba(213, 103, 230, 0.33);
 		font-size: 20px;
 		line-height: 1.6;
 	}
 	nav a {
-		color: white;
+		color: rgba(213, 103, 230, 0.33);
 	}
 	.astro-a {
 		position: absolute;
