Astro页面样式修改

--- a/superior-shepherd/src/pages/about.astro
+++ b/superior-shepherd/src/pages/about.astro
@@ -1,18 +1,19 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
+import Menu from '../components/Menu.astro'
+import Footer from "../components/Footer.astro"
 import "./styles/global.css";
 ---
+
 
 
 <Layout title="欢迎来到Astro">
 	<main>
 		<svg>	···
     </svg>
-			<a href="/">首页</a>
-			<a href="/about/">关于</a>
-			<a href="/blog/">博客</a>
-			<a href="/notes/">笔记</a>
+		<Menu/>
+		<Footer />
 	
 		<h1>关于我</h1>
 	<p>在这个页面，我将展示一些关于我的信息</p>
@@ -20,14 +21,23 @@ import "./styles/global.css";
 </Layout>
 
 <style>
+	body {
+			margin: 0;
+			padding: 0;
+			font-family: 'Arial', sans-serif;
+			background: linear-gradient(to right, #c2e5ef, #f3e2af); /* 蓝色到黄色的渐变 */
+	}
+	
 	main {
 		margin: auto;
 		padding: 1rem;
 		width: 800px;
 		max-width: calc(100% - 2rem);
-		color:rgb(245, 222, 226);
+		color:rgb(88, 96, 182);
 		font-size: 20px;
 		line-height: 1.6;
+		
+	}
 	}
 	nav a {
 		color: rgb(245, 222, 226);
@@ -58,6 +68,8 @@ import "./styles/global.css";
 		-webkit-text-fill-color: transparent;
 		background-size: 400%;
 		background-position: 0%;
+		
+		
 	}
 	.instructions {
 		margin-bottom: 2rem;
