--- a/superior-shepherd/src/pages/notes.astro
+++ b/superior-shepherd/src/pages/notes.astro
@@ -1,17 +1,17 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
+import Menu from "../components/Menu.astro"
+import Footer from "../components/Footer.astro"
 import "./styles/global.css";
 ---
 
 <Layout title="欢迎来到Astro">
     <main>
-        <nav>
-            <a href="/">首页</a>
-            <a href="/about/">关于</a>
-            <a href="/blog/">博客</a>
-            <a href="/notes/">笔记</a>
-        </nav>
+      <svg>
+      </svg>
+      <Menu/>
+      <Footer />
         <h1 class="text-gradient">课程笔记</h1>
         <p>在这个页面，我将展示一些关于我的课程笔记。</p>
     </main>
@@ -19,25 +19,31 @@ import "./styles/global.css";
             <a href="/md/2" >Astro 安装及部署</a>
         </article>
         <article class="link-card">
-            <a href="/md/3" >在Astro中创建页面及链接</a>
-            <article class="link-card">
+          <a href="/md/3">在Astro中创建页面及链接</a>
         </article>
     </section>
 </Layout>
 
 <style>
+  body {
+			margin: 0;
+			padding: 0;
+			font-family: 'Arial', sans-serif;
+			background: linear-gradient(to right, #c2e5ef, #f3e2af); /* 蓝色到黄色的渐变 */
+	}
+
   main {
     margin: auto;
     padding: 1rem;
     width: 800px;
     max-width: calc(100% - 2rem);
-    color: rgb(245, 222, 226);
+    color: rgb(78, 88, 164);
     font-size: 20px;
     line-height: 1.6;
   }
   
   nav a {
-    color: rgb(245, 222, 226);
+    color:black;
     text-decoration: none;
     margin: 0 10px;
   }
@@ -66,7 +72,7 @@ import "./styles/global.css";
     flex-basis: calc(50% - 2rem); /* 两列布局，减去间距 */
     box-sizing: border-box;
     padding: 1rem;
-    background: #fff;
+    background: linear-gradient(to right, #03bbee, #d3a20f);;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-bottom: 1rem;
