--- a/superior-shepherd/src/pages/styles/global.css
+++ b/superior-shepherd/src/pages/styles/global.css
@@ -1,91 +1,75 @@
+/* 重置浏览器默认样式 */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+body,
+html {
+  font-family: 'Montserrat', sans-serif;
   line-height: 1.6;
-  color: #333;
-  background-color: #f0f8ff; /* 淡青色背景，给人一种宁静的感觉 */
-  padding: 20px;
+  background: #f5f0e1;
+  /* 默认背景颜色 */
+  color: #51382a;
+  height: 100%;
+}
+
+body {
+  background-image: url(https://bpic.588ku.com/back_pic/06/16/00/0062ac12ee5a0c2.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  min-height: 100%;
+}
+
+/* 其他选择器... */
+
+@media (max-width: 768px) {
+  nav ul li {
+    margin: 5px 0;
+  }
+
+  section,
+  .footer-content {
+    margin: 1rem;
+    padding: 1rem;
+  }
+
+  h1 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+  }
+}
+
+h1,
+h2 {
+  position: fixed;
+  bottom: 10px;
+  left: 0;
+  margin: 0;
+  padding: 1rem;
+  /* 添加内边距以提供一些空间 */
+  color: #9b4f1ff6;
+
 }
 
 h1 {
-  font-size: 2.5rem;
-  font-weight: bold;
-  color: #004a94; /* 宝石蓝 */
-  margin-top: 1em;
+  font-size: 2rem;
+  bottom: 80px;
+
+
+
 }
 
 h2 {
-  font-size: 2rem;
-  border-bottom: 2px solid #004a94; /* 宝石蓝下边框 */
-  padding-bottom: 0.3em;
-  margin-top: 1em;
-}
+  font-size: 1.5rem;
+  bottom: 40px;
 
-nav {
-  background: #004a94; /* 宝石蓝背景 */
-  color: #ffffff; /* 白色文字 */
-  padding: 10px 20px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-nav ul {
-  list-style: none;
-  display: flex;
-}
-
-nav ul li {
-  margin-left: 20px;
-}
-
-nav a {
-  color: #f0f8ff; /* 淡青色链接 */
-  text-decoration: none;
-}
-
-.main-content {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 20px;
-  background: #ffffff; /* 白色内容区域 */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.main-content h1 {
-  font-size: 2.5rem;
-  color: #333; /* 深灰色标题 */
-  margin-bottom: 1rem;
-}
-
-.main-content p {
-  margin-bottom: 1.5rem;
-  text-align: justify;
-}
-
-.main-content img {
-  max-width: 100%;
-  height: auto;
-  display: block;
-  margin: 0.5rem auto;
-}
-
-.sidebar {
-  max-width: 300px;
-  margin: 20px auto;
-  padding: 20px;
-  background: #e0f3ff; /* 浅蓝色背景 */
-}
-
-footer {
-  background: #004a94; /* 宝石蓝背景 */
-  color: #f0f8ff; /* 淡青色文字 */
-  text-align: center;
-  padding: 10px 20px;
-  width: 100%;
 }
